fixed horizontal scrolling

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1251,9 +1251,9 @@ svg{
                     
                     .panel1 {
                         padding: 0 5px;
-                        display: flex;
+                        // display: flex;
                         // justify-content: center;
-                        align-items: center;
+                        // align-items: center;
                         scroll-snap-align: center;
                         width: 95vw;
 
@@ -1304,9 +1304,9 @@ svg{
 
                     .panel2 {
                         padding: 0 5px;
-                        display: flex;
+                        // display: flex;
                         // justify-content: center;
-                        align-items: center;
+                        // align-items: center;
                         scroll-snap-align: center;
                         width: 95vw;
 
@@ -1358,9 +1358,9 @@ svg{
 
                     .panel3 {
                         padding: 0 5px;
-                        display: flex;
+                        // display: flex;
                         // justify-content: center;
-                        align-items: center;
+                        // align-items: center;
                         scroll-snap-align: center;
                         width: 95vw;
             
@@ -1470,9 +1470,9 @@ svg{
 
                     .panel5 {
                         padding: 0 5px;
-                        display: flex;
+                        // display: flex;
                         // justify-content: center;
-                        align-items: center;
+                        // align-items: center;
                         scroll-snap-align: center;
                         width: 95vw;
             
